--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
-  base = "frontend"
-  command = "npm install && npm run build"
-  publish = ".next"
+  base = "."
+  command = "npm run build"
+  publish = "frontend/.next"
 
 [[plugins]]
   package = "@netlify/plugin-nextjs"
