--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Plataforma interna de Respect - Prototipo",
   "scripts": {
     "dev": "cd frontend && npm run dev",
-    "build": "cd frontend && npm run build",
+    "build": "npm run install:all && cd frontend && npm run build",
     "install:all": "cd frontend && npm install && cd ../netlify/functions && npm install"
   },
   "dependencies": {
